# music-turtles

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: composition.rs  constants.rs  local_playback.rs  main.rs  player.rs  scheduler.rs  serde.rs  test.rs  time.rs
backend/src/cfg/: interactive.rs  mod.rs  scan.rs
backend/src/test/: playground.rs
data/: bach_prelude_in_c.grm  bach_prelude_in_c.mtx  bach_prelude_in_c_measures_fixed.mtx  beat-1.grm  beat-1.mtx  funk-2.mtx  funk-3.mtx  funk.mtx  funky_bach.mtx  grm1.grm  grm2.grm  grm3.grm  grm4.grm  grm5.grm  grm6.grm  stress-test1.mtx
frontend/vibelive/: package-lock.json  package.json
frontend/vibelive/src/: App.tsx  Terminal.tsx  TracedString.tsx  protocol.tsx
music-turtles/src/: constants.rs  local_playback.rs  main.rs  player.rs  scheduler.rs
music-turtles/src/cfg/: interactive.rs  mod.rs  scan.rs
music-turtles/src/test/: mod.rs  playground.rs
src/: composition.rs  main.rs  player.rs  scheduler.rs  time.rs
src/cfg/: mod.rs  scan.rs
values_macro_derive/: Cargo.toml
values_macro_derive/src/: lib.rs
