[package]
name = "vibelive"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.20.1"
num = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
midly = "0.5.3"
midir = "0.10.1"
rand = "0.8.5"
strsim = "0.11.1"
values_macro_derive = { path="../values_macro_derive" }
simplelog = "0.12"
log = "0.4.26"